Fix WhatsApp links to use admin configuration

--- a/nerin_final_updated/frontend/checkout-steps.html
+++ b/nerin_final_updated/frontend/checkout-steps.html
@@ -119,7 +119,7 @@
     </main>
     <div id="footer-root"></div>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">
+      <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
