--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -127,6 +127,7 @@
                 href="https://wa.me/541112345678"
                 target="_blank"
                 rel="noopener noreferrer"
+                data-whatsapp-link
               >
                 Cotizar por WhatsApp
               </a>
@@ -232,7 +233,7 @@
             <p class="form-feedback" id="contactFeedback" role="status" aria-live="polite"></p>
             <div class="form-wholesale-hint" id="formWholesaleHint" hidden>
               <p class="form-wholesale-hint__title">¿Operás volumen?</p>
-              <a class="form-wholesale-hint__link" href="/account-minorista.html"
+              <a class="form-wholesale-hint__link" href="/register.html#wholesaleForm"
                 >Accedé a tu lista de precios y stock.</a
               >
             </div>
@@ -455,6 +456,7 @@
                 href="https://wa.me/541112345678"
                 target="_blank"
                 rel="noopener noreferrer"
+                data-whatsapp-link
               >
                 Cotizar por WhatsApp
               </a>
