--- a/nerin_final_updated/frontend/cart.html
+++ b/nerin_final_updated/frontend/cart.html
@@ -84,7 +84,7 @@
       </div>
     </main>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">
+      <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
