--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -206,7 +206,7 @@
 
     <div id="footer-root"></div>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">
+      <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
