--- a/nerin_final_updated/frontend/login.html
+++ b/nerin_final_updated/frontend/login.html
@@ -53,7 +53,7 @@
       </form>
     </main>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">
+      <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
