--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -127,7 +127,7 @@
       aria-label="Galería de imágenes"
     ></div>
     <div id="whatsapp-button">
-      <a href="https://wa.me/541112345678" target="_blank">
+      <a href="https://wa.me/541112345678" target="_blank" data-whatsapp-link>
         <img src="/assets/whatsapp.svg" alt="WhatsApp" />
       </a>
     </div>
